@@ -1,11 +1,17 @@
 todoyu profile extension changelog
 
+profile 1.1.3 - not released yet
+	* Added: Removal of error classnames and messages from afore invalid re-validated profile fields
+
+
 profile 1.1.2 - 2011-11-17
 	* Translation: Polish
+
 
 profile 1.1.1 - 2011-09-15
 	* Minor cleanups
 	* Added: Notification identifier for saved password in profile
+
 
 profile 1.1.0 - 2011-06-17
 	* Feature: Added module form legends, cleanup and equalization of module content views
